@@ -1,3 +1,7 @@
+2009-10-12  Zoltan Varga  <vargaz@gmail.com>
+
+	* Process.cs (Dispose): Close the async output/error readers. Fixes #545429.
+
 2009-07-22  Jb Evain  <jbevain@novell.com>
 
 	* ProcessStartInfo.cs: force no-verb on MONOTOUCH.
